1.10.0/_sources/reference_cmd/dipy_slr.rst.txt
.. dipy_slr:

========
dipy_slr
========

Synopsis
--------

Streamline-based linear registration.

For efficiency we apply the registration on cluster centroids and remove small clusters.  See :footcite:p:`Garyfallidis2014b`, :footcite:p:`Garyfallidis2015`, :footcite:p:`Garyfallidis2018` for further details.

Usage
-----

.. code-block:: bash

    dipy_slr [OPTIONS] static_files moving_files

Input Parameters
----------------

* ``static_files``

  List of reference/fixed bundle tractograms.

* ``moving_files``

  List of target bundle tractograms that will be moved/registered to
  match the static bundles.

General Options
---------------

* ``--x0``

  rigid, similarity or affine transformation model.

* ``--rm_small_clusters``

  Remove clusters that have less than `rm_small_clusters`.

* ``--qbx_thr``

  Thresholds for QuickBundlesX.

* ``--num_threads``

  Number of threads to be used for OpenMP parallelization. If None
  (default) the value of OMP_NUM_THREADS environment variable is
  used if it is set, otherwise all available threads are used. If
  < 0 the maximal number of threads minus $|num_threads + 1|$ is used
  (enter -1 to use as many threads as possible). 0 raises an error.
  Only metrics using OpenMP will use this variable.

* ``--greater_than``

  Keep streamlines that have length greater than
  this value.

* ``--less_than``

  Keep streamlines have length less than this value.

* ``--nb_pts``

  Number of points for discretizing each streamline.

* ``--progressive``

  True to enable progressive registration.

Output Options
--------------

* ``--out_dir``

  Output directory. (default current directory)

* ``--out_moved``

  Filename of moved tractogram.

* ``--out_affine``

  Filename of affine for SLR transformation.

* ``--out_stat_centroids``

  Filename of static centroids.

* ``--out_moving_centroids``

  Filename of moving centroids.

* ``--out_moved_centroids``

  Filename of moved centroids.

References
----------

.. footbibliography::

Garyfallidis, E., M. Brett, B. Amirbekian, A. Rokem, S. Van Der Walt, M. Descoteaux, and I. Nimmo-Smith. Dipy, a library for the analysis of diffusion MRI data. Frontiers in Neuroinformatics, 1-18, 2014.